<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Pix-EzViewer</string>
    <string name="app_features">
        "部分功能隐藏于菜单或长按后，多按直觉尝试\n"
    </string>
    <string name="app_help">
        "0.本应用是免费应用，如果您付费购买，请立即请求退款并打差评！\n"
        "请务必确保在商店或者项目地址内安装与更新,第三方提供的安装包可能存在问题且不是最新\n"
        "1.在图片详情页长按可以保存选定图片，长按头像快速关注作者，请提供应用权限\n"
        "2.大多数按钮设有有符合直觉的长按特殊操作（如图片收藏时打tag），或者藏在菜单里，可以多尝试\n"
        "3.浏览动图时，点击中间0%进度条开始下载,完毕播放后长按进行合成保存，合成过程内存开销相当之大,偶发崩溃不可避免\n"
        "4.若播放动图无法播放,请退出页面或者清除缓存后重试,这一般会起作用\n"
        "5.这是一个个人开发的应用,反馈请发邮件到设置页标注的邮箱或GitHub提交issue,个人精力和能力是有限的,请不要使用极端方式进行反馈,体谅开发者,也欢迎共同开发设计\n"
        "6.遇到更新后闪退的问题,请尝试清除应用数据并更新到最新版,将提示错误信息或日志反馈给开发者,多数情况下这是有效的\n"
        "7.R限制总开关在官网里，遇到无权限访问的插画，自行至网页开启，开发者不提供帮助服务，开发者并不是老好人\n"
        "8.新账户注册支持已暂停，请自行官网注册\n"
        "9.本应用不收集除崩溃信息以外的非必要信息\n"
        "\n可在设置页重新打开此帮助"
    </string>
    <string name="login_help_md"># TroubleShoot帮助\n\n如果你登录时提示\n\n```shell\n    http 400 bad request\n```\n\n请尝试以下步骤\n1. 确保应用是最新的，到google play或者github获取最新的版本\n2. 检查接入点APN是否为Net而不是Wap\n3. 已是最新版，则用户名或者密码有错(104:)，需要核对账号密码\n4. 账号未完成验证或者用户账号无效(103:)，需要到官网进行验证完善\n\nps:账号密码指的是pixiv的账号密码，而不是github的\n\n如果登录后提示\n\n```shell\n    程序出错，即将退出,xx resourece not found\n```\n\n1. 确保应用是最新的，到google play或者github获取最新的版本\n2. 确保应用是google play或者github获取的，而不是别人传的甚至某某dalao卖的\n3. 到以上渠道安装完最新版本后，清除应用数据并重新尝试登录\n\n## 若都无帮助\n\n请通过反馈邮箱，详细反馈版本号，系统信息，错误信息截图\n反馈之前,你需要确保\n\n1. 应用是google play或者github获取的\n2. 不是使用尝鲜系统或者使用xposed或者magisk模块进行过魔改\n3. 已仔细阅读完毕\"请务必读完\"</string>
    <string name="follow">关注</string>
    <string name="following">关注中</string>
    <string name="following_private">（悄悄关注）</string>
    <string name="click">点击请我喝杯咖啡</string>
    <string name="support_string">反馈邮箱：Pix-Ez@outlook.com 欢迎通过github 反馈及star 也可以通过关于页面跳转请我喝杯咖啡</string>
    <string name="current_developer">当前开发者</string>
    <string name="support_Notsfsssf" translatable="false">912756674@qq.com</string>
    <string name="support_text">"PixEz对您有帮助吗？\n 您的支持将鼓励我持续开发~\n 可以通过邮箱发送信息认领捐赠！"</string>
    <string name="support_popup_title">支持开发者：</string>
    <string name="support_static">粗略统计，您使用PixEz收图张数已达：%1$s !</string>
    <string name="ali">跳转到支付宝</string>
    <string name="wechat">跳转到微信</string>
    <string name="thanks_to">感谢</string>
    <string name="thanks">感谢腐奇，爱酱,Snake，PoisonBCat,涛灬,万物皆虚,繁落,碘酒,betray,right now,niconiconi,firok,YAMAHA,OneMice,SC61帮助我测试的弹幕委员会的热心你群群友们,以及提供会员帐号的果干辣，还有积极提供建议的吸血姬，逢田梨香子的老公,吃猫的咸鱼等热心用户们</string>
    <string name="title_activity_saucenao" translatable="false">Saucenao Search</string>
    <string name="nav_header_title" translatable="false">PxEz</string>
    <string name="nav_header_subtitle" translatable="false">Pix-Ez@outlook.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="img_manager">图片管理</string>
    <string name="checkupdate">检查更新</string>
    <string name="_18">隐藏遮罩</string>
    <string name="pic_quality">图片质量</string>
    <string name="pic_quality_download">下载图片质量</string>
    <string name="origin">加载原图</string>
    <string name="searchsource">以图搜源</string>
    <string name="clear_cache">清除缓存</string>
    <string name="view_history">历史记录</string>
    <string name="appsetting">应用设置</string>
    <string name="logout">登出</string>
    <string name="account">账号</string>
    <string name="account_helper">Pixiv ID或邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_help">登录帮助</string>
    <string name="donthaveaccount">没有帐号？</string>
    <string name="error_blank_account">账号不能为空</string>
    <string name="error_blank_password">密码不能为空</string>
    <string name="error_invalid_account_password">账号或密码错误</string>
    <string name="saveformat">保存格式</string>
    <string name="filesaveformat">自定义保存格式</string>
    <string name="filesaveformatstring">自定义保存格式字符串:</string>
    <string name="Illust_id_desc">插画ID</string>
    <string name="Title_desc">插画标题</string>
    <string name="Painter_id_desc">画师ID</string>
    <string name="Painter_Name_desc">画师昵称</string>
    <string name="Painter_Account_desc">画师账号</string>
    <string name="Which_part_desc">第几张(单张不显示,前为"_"或"_p"一并省略)</string>
    <string name="type_desc">原图格式(通常为.jpg或.png,不建议修改)</string>
    <string name="tag_desc">标签(自动去重，用连接符连接)</string>
    <string name="tag_separator">标签连接符：</string>
    <string name="savepath">保存路径</string>
    <string name="startpage">初始页面</string>
    <string name="try_to_login">尝试登录中</string>
    <string name="pixel">分辨率</string>
    <string name="view">查看</string>
    <string name="bookmark">收藏</string>
    <string name="view_comment">查看评论</string>
    <string name="related">相关推荐</string>
    <string name="illustid">插画ID</string>
    <string name="searchhistory">搜索历史（长按删除）</string>
    <string name="clearhistory">清空历史</string>
    <string name="hottags">热门标签（长按试试~）</string>
    <string name="newwork">新作</string>
    <string name="oldwork">旧作</string>
    <string name="part">部分</string>
    <string name="complete">完全</string>
    <string name="title">标题</string>
    <string name="by">按照顺序</string>
    <string name="search_by">搜索筛选</string>
    <string name="search">搜索</string>
    <string name="same_as_tag">与标签一致</string>
    <string name="painterid">画师ID</string>
    <string name="word">综合</string>
    <string name="goodpfriend">好P友</string>
    <string name="ta">ta的介绍</string>
    <string name="user_info">ta的资料</string>
    <string name="theme">主题样式</string>
    <string name="setting">设置</string>
    <string name="savesuccess">保存成功!</string>
    <string name="alreadysaved">图片已存在</string>
    <string name="registerclose">应用内注册入口已关闭，请自行前往Pixiv官网注册</string>
    <string name="api_config">连接设置</string>
    <string name="encode_gif">合成gif</string>
    <string name="save_zip">保存zip</string>
    <string name="savefirst">下载首图</string>
    <string name="fetchtags">请求标签....</string>
    <string name="publics">公开</string>
    <string name="privates">非公开</string>
    <string name="reply_to">回复</string>
    <string name="illust">插画</string>
    <string name="manga">漫画</string>
    <string name="ugoira" translatable="false">Ugoira</string>
    <string name="abouts">关于</string>
    <string name="painter">画师</string>
    <string name="new1">动态</string>
    <string name="saveselectpic1">保存选定图片?</string>
    <string name="confirm">确定</string>
    <string name="multichoicesave">多选保存</string>
    <string name="choice">选择</string>
    <string name="save">保存</string>
    <string name="download">下载</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="add">添加</string>
    <string name="logoutallaccount">登出所有账户？</string>
    <string name="savegifsuccess">成功保存动图</string>
    <string name="savegifsuccesserr">保存动图失败</string>
    <string name="crash_report">报告</string>
    <string name="feed_back">反馈</string>
    <string name="title_activity_search_r" translatable="false">SearchActivity</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <string name="needstatusbar">异形屏：详情状态栏不沉浸</string>
    <string name="refreshTab">tab自动刷新</string>
    <string name="refreshTab_summary">首页等切换后不保留先前状态，节省内存</string>
    <string name="changeicons">更换图标</string>
    <string name="supporttitle">支持</string>
    <string name="view_report">查看报告</string>
    <string name="needtorestart">重启应用生效</string>
    <string name="collectmode">收图模式</string>
    <string name="animation">更多动画</string>
    <string name="animation_summary">关闭可节省转场动画的运存</string>
    <string name="show_user_img_searchr">搜索结果页面显示用户头像</string>
    <string name="show_user_img_searchr_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="show_user_img_bookmarked">收藏页面显示用户头像</string>
    <string name="show_user_img_bookmarked_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="show_user_img_main">首页显示用户头像</string>
    <string name="show_user_img_main_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="new_banner">滑动式pixivision展示</string>
    <string name="banner_summary">banner可循环滑动</string>
    <string name="banner_auto_loop">循环banner</string>
    <string name="download_progress">下载进度</string>
    <string name="join_download_queue">加入下载队列</string>
    <string name="again_to_exit">再按一次返回键退出</string>
    <string name="dark_mode">深色主题</string>
    <string name="restart_now">立即生效</string>
    <string name="restart">重启</string>
    <string name="account_management">账号管理</string>
    <string name="auto_check_update">自动检查更新</string>
    <string name="bookmark_private">悄悄收藏</string>
    <string name="bookmark_public">公开收藏</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="choose_date">选择时间</string>
    <string name="hide_bookmarked">隐藏已收藏图片</string>
    <string name="summary">在刚接触JAVA的时候边学官方文档边做,摸索着完成了这个客户端,因为个人能力的问题,出过不少丢人的BUG,优化问题,在完善这个应用的过程中，我获得了很多的开发经验与比较深刻的教训，也得到了很多人的帮助和支持</string>
    <string name="title_change_theme">更换主题</string>
    <string name="title_save_path">保存路径</string>
    <string name="title_change_icon">更换图标</string>
    <string name="title_theme_color">主题颜色</string>
    <string name="action_apply">应用</string>
    <string name="action_select">选择</string>
    <string name="action_change">更换</string>
    <string name="create_painter_folder">为每个画师单独创建文件夹</string>
    <string name="create_separate_folder">创建单独文件夹</string>
    <string name="create_R18_folder">创建单独R18文件夹</string>
    <string name="R18_folder">单独R18文件夹名称\n（默认xRestrict/）</string>
    <string name="R18_private">自动私密收藏</string>
    <string name="refresh_token">刷新身份信息</string>
    <string name="refresh_token_fail">刷新身份信息失败</string>
    <string name="translate">翻译</string>
    <string name="back_to_the_top">双击回顶</string>
    <string name="add_to_block_tag_list">添加到屏蔽标签列表</string>
    <string name="block_tag">屏蔽标签</string>
    <string name="block_user">屏蔽用户</string>
    <string name="block_face" translatable="false"><![CDATA[>_<]]></string>
    <string name="title_activity_manager_settings">设置</string>
    <string name="max_task_num">最大任务数</string>
    <string name="thread_num">线程数</string>
    <string name="task_setting">任务设置</string>
    <string name="all_resume">全部恢复</string>
    <string name="all_stop">全部暂停</string>
    <string name="all_cancel">清空列队</string>
    <string name="finished_cancel">移除已完成任务</string>
    <string name="unfinished_task">下载未完成的任务</string>
    <string name="show_download_toast">下载中显示Toast提醒</string>
    <string name="resume_unfinished_task_on">启动app时自动恢复未完成任务</string>
    <string name="resume_unfinished_task_off">启动app时仅保留下载未完成任务</string>
    <string name="already_encoding">已在进行</string>
    <string name="save_zip_success">保存zip成功</string>
    <string name="permission_denied">未获得授权，请自行到系统设置进行授权</string>
    <string name="cache_clear_message">这将清理全部的缓存</string>
    <string name="ok">确定</string>
    <string name="confirm_title">删除？</string>
    <string name="wrong_id">id错误</string>
    <string name="error_unknown">其他错误，检查接入点APN是否为Net而不是Wap,检查网络是否通畅</string>
    <string name="login_success">登录成功</string>
    <string name="share">分享</string>
    <string name="saucenao_compress_success">解析成功正在上传</string>
    <string name="saucenao_upload_success">上传成功，正在进行匹配</string>
    <string name="saucenao_upload_error">服务器或本地发生错误</string>
    <string name="uploading">Uploading</string>
    <string name="upload_success">Upload Success,Plz re-enter this page</string>
    <string name="copied">Copied</string>
    <string name="saved">Saved</string>
    <string name="novel_font_larger">增大字号</string>
    <string name="novel_font_smaller">减小字号</string>
    <string name="novel_series_prev">上一篇</string>
    <string name="novel_series_next">下一篇</string>
    <string name="novel_background">阅读背景</string>
    <string name="novel_line_space">行距</string>
</resources>